website/static/website/css/fixed_side_bar.css
.shortTextbox {
  width: 100%;
}

.filter-selected {
  font-weight: bold;
}

#fixed-side-bar {
  margin-left: 15px;
  margin-top: 85px;
  width: 125px;
  left: 0;
  top: -60px;
  /*font-family: adelle-light;*/
  text-align: right;
  position: absolute;
  font-size: small;
}

#fixed-side-bar h1 {
  font-size: 14px;
  margin-bottom: 0;
  padding-bottom: 0;
  font-weight: normal;
}

#filter-bar li {
  text-decoration: none;
  font-size: 12px;
  list-style: none;
  cursor: pointer;
  width: 100%;
}

#filter-bar .filter-group {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: inline-block;
  width: 105px;
  vertical-align: middle;
}

#filter-bar .filter-group-count {
  display: inline-block;
  width: 20px;
  vertical-align: middle;
}

